fix: header news and content text image alignment

--- a/src/sections/content-text-image/styles.module.scss
+++ b/src/sections/content-text-image/styles.module.scss
@@ -66,7 +66,7 @@
   }
 
   @include mq("desktop") {
-    grid-column: 6/13;
+    grid-column: 5/13;
 
     > p,
     h1,
